Update 'hzr8snjwd-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:97ba30321903cd66e973123310299e032771f617@sha256:c5267fd1a4f235e625f1865641ca7a070fc67226ee88b773b5bdea028035dea9

--- a/components/hzr8snjwd-python/overlays/development/deployment-patch.yaml
+++ b/components/hzr8snjwd-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hzr8snjwd-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:97ba30321903cd66e973123310299e032771f617@sha256:c5267fd1a4f235e625f1865641ca7a070fc67226ee88b773b5bdea028035dea9
+          name: container-image
